# elrond

./: ++psvn.state  Makefile.am  README  README.md  RELEASE-NOTES  bootstrap.sh  build-local.sh  build-setup.sh  build.sh  clean-local.sh  clean.sh  configure.in  distclean.list  distclean.sh  extras  files  post-build.sh  run-configure.sh  setup.cfg.in  setup.py  setup.py.in  test-local.sh  test.sh
docs/ref/xul/: Makefile.am  api-index-full.html  ch01.html  index.html  index.sgml  object-tree.html  xul-docs.sgml.in  xul-sections.txt  xul-xerror.html  xul-xprefs.html  xul-xtime.html  xul-xul.html  xul-xverbose.html  xul.devhelp  xul.devhelp2
docs/xul/: api-index-full.html  ch01.html  index.html  xul-xul.html  xul-xverbose.html  xul.devhelp  xul.devhelp2
etc/: common  console.ui  db-load.dbxml  db-load.sql  db-test.dbxml  dialog.ui  elrond-console-app.ui  elrond-console-widget.ui  elrond-console.ui  elrond-db-create.sql  elrond-db-delete.sql  elrond-db-dump.sql  elrond-dialog-app.ui  elrond-dialog-widget.ui  elrond-dialog.ui  elrond-example-app.ui  elrond-example-widget.ui  elrond-plane-app.ui  elrond-plane-widget.ui  elrond-plane.ui  elrond-qna-app.ui  elrond-qna-widget.ui  elrond-saveas-widget.ui  elrond-saveas.ui  elrond-window-widget.ui  elrond-window.ui  elrond-yesno-app.ui  elrond-yesno-widget.ui  elrond-yesno.ui  lighttpd.conf  plane.ui  xultest.ini.in  xultool.ini.in
etc/widget-catalog.d/: ElrondWidgets.py  widget-catalog.xml
m4/: acinclude.m4
src/: Makefile.am
src/flusher/: Makefile.am  flusher.c  launcher.c
src/include/: Makefile.am  common.h  elrond_common.h
src/misc/: Makefile.am  launcher.c
src/python/elrond/: __init__.py  concurrent.py  db.py  macros.py  static.py  tasks.py  test.py  ui.py  util.py  widgets.py  xul.py
src/python/elrond/db/: test.py
src/python/elrond/util/: util.py
src/python/elrond/www/: settings.py  util.py
src/python/kochanski/: db.py  test.py  util.py
src/python/kochanski/db/: db.py  test.py
src/python/kochanski/util/: test.py  util.py
src/ref/: Makefile.am
src/ref/xul/: Makefile.am  xul-docs.sgml.in
src/tests/: Makefile.am
src/tests/xul/: Makefile.am  xbuffer.c  xprefs.c  xshm.c  xtime.c  xultest.c  xultest.h
src/xul/: Makefile.am  _xul.h  wrapper.i  xbuffer.c  xbuffer.h  xerror.c  xerror.h  xprefs.c  xprefs.h  xshm.c  xtime.c  xtime.h  xtrace.c  xtrace.h  xul.c  xul.h  xultool.c  xverbose.c  xverbose.h
src/xul/ref/: Makefile.am
var/www/: elrond.wsgi
var/www/site/: index.html
